@@ -212,7 +212,7 @@ Nous avons les exigences suivantes. Il doit
 <h3>Comment puis-je apprendre la syntaxe&nbsp;?</h3>
 <p>
   Jetez un oeil au <a
-  href="@DOC@v2.6/Documentation/user/lilypond.html#Tutorial">tutoriel</a>.
+  href="@DOC@stable/Documentation/user/lilypond.html#Tutorial">tutoriel</a>.
   Il est assez court, divis&eacute; en sous-parties facilement
   abordables, et nous avons pass&eacute; beaucoup de temps &agrave; le
   peaufiner.  Si vous pr&eacute;f&eacute;rez vous lancer tout de
