@@ -14,7 +14,7 @@
 <h2>Newbies</h2>
 <p>
   D&eacute;butez votre apprentissage avec le
-  <a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial.html">Tutoriel</a>.
+  <a href="@DOC@stable/Documentation/user/lilypond/Tutorial.html">Tutoriel</a>.
 </p>
 
 
@@ -29,7 +29,7 @@
 
 <p>
   Si elle n'y est pas, consultez la documentation
-  <a href="@DOC@v2.6">en ligne</a>  (pour les versions autres que 2.6,
+  <a href="@DOC@stable">en ligne</a>  (pour les versions autres que stable,
   cliquez <a href="../documentation.html">ici</a>).
 </p>
 
