@@ -29,7 +29,7 @@ seront align&eacute;es que si elles doivent &ecirc;tre attaqu&eacute;es en m&eci
 
 <p>
 <center>
-<a href="http://lilypond.org/doc/v2.7/input/proportional.pdf">
+<a href="http://lilypond.org/doc/latest/input/proportional.pdf">
 <img src="@IMAGES@proportional-fragment.png"></a>
 <p>
 cliquez pour obtenir un fichier PDF.</center>
