@@ -50,7 +50,7 @@
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.8/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
+  <a href="@DOC@stable/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
      title="Click for a PDF file">
     <img src="@IMAGES@sarabande.png" alt="sarabande">
   </a>
@@ -65,7 +65,7 @@
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.8/input/les-nereides.pdf"
+  <a href="@DOC@stable/input/les-nereides.pdf"
      title="Click for a PDF file">
     <img src="@IMAGES@les-nereides.png" alt="les-nereides"></a>
 </p>
@@ -77,8 +77,8 @@
   D'autres extraits de versions plus r&eacute;centes de LilyPond sont
   accessibles dans les pages de documentation. Des pages
   s&eacute;par&eacute;es existent pour les versions <a
-  href="@DOC@v2.8/examples.html">stable</a> et de
-  <a href="@DOC@v2.9/examples.html">d&eacute;veloppement</a>.
+  href="@DOC@stable/examples.html">stable</a> et de
+  <a href="@DOC@latest/examples.html">d&eacute;veloppement</a>.
 </p>
 
 <h3>Notation contemporaine</h3>
