@@ -84,7 +84,7 @@ Dit is de
     Direct contact opnemen met de auteurs?</dt>
     <dd>
     Kijk op
-    <a href="@DOC@v2.6/Documentation/topdocs/AUTHORS.html">de
+    <a href="@DOC@stable/Documentation/topdocs/AUTHORS.html">de
       auteurlijst</a>.
     (<em>Neem uitsluitend contact op met de auteurs voor persoonlijke
       zaken</em>)
