@@ -14,7 +14,7 @@
 <h2>Beginners</h2>
 <p>
   Begin met het lezen van de
-  <a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial.html">Korte handleiding</a>
+  <a href="@DOC@stable/Documentation/user/lilypond/Tutorial.html">Korte handleiding</a>
 </p>
 
 
@@ -28,9 +28,9 @@
 </pre>
 
 <p>
-  Kun je het daar niet vinden, bekijk de documentatie dan
-  <a href="@DOC@v2.4">on line</a>.  (Voor andere versies dan 2.4,
-  klik <a href="../documentation.html">hier</a>).
+  Kun je het daar niet vinden, bekijk de documentatie dan <a
+  href="@DOC@stable">on line</a>.  (Voor andere versies dan de meest
+  recente stabiele, klik <a href="../documentation.html">hier</a>).
 </p>
 
 <h2>Help!</h2>
