@@ -114,4 +114,4 @@ ingevoerd met een backslash.
 <h2>Lees meer</h2>
 
 <a href="../install">Download</a> LilyPond en lees de
-<a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial">verkorte handleiding</a>.
+<a href="@DOC@stable/Documentation/user/lilypond/Tutorial">verkorte handleiding</a>.
