@@ -47,7 +47,7 @@ probleem. Eenvoudige solostukken zijn klaar in een handomdraai
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.6/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
+  <a href="@DOC@stable/input/mutopia/J.S.Bach/baerenreiter-sarabande.pdf"
      title="klik voor een PDF-file">
     <img src="@IMAGES@sarabande.png"
 	 alt="sarabande"></a>
@@ -61,7 +61,7 @@ probleem. Eenvoudige solostukken zijn klaar in een handomdraai
 </p>
 
 <p align="center">
-  <a href="@DOC@v2.6/input/les-nereides.pdf"
+  <a href="@DOC@stable/input/les-nereides.pdf"
      title="klik voor een PDF-file">
     <img src="@IMAGES@les-nereides.png"
 	 alt="les-nereides"> </a>
@@ -73,8 +73,8 @@ probleem. Eenvoudige solostukken zijn klaar in een handomdraai
 <p>
   Meer voorbeelden van de laatste LilyPond-versies zijn te vinden op de
   documentatiepagina's.  Er zijn aparte pagina's voor de
-  <a href="@DOC@v2.4/examples.html">stabiele versie</a> en voor de
-  <a href="@DOC@v2.5/examples.html">ontwikkelingsversie</a>.
+  <a href="@DOC@stable/examples.html">stabiele versie</a> en voor de
+  <a href="@DOC@development/examples.html">ontwikkelingsversie</a>.
 </p>
 
 <h3>On line muziekcollectie</h3>
