@@ -190,7 +190,7 @@ We have the following requirements.  It must
 <h3>How do I learn the syntax?</h3>
 <p>
   Take a look at the
-  <a href="@DOC@v2.6/Documentation/user/lilypond.html#Tutorial">tutorial</a>.
+  <a href="@DOC@stable/Documentation/user/lilypond.html#Tutorial">tutorial</a>.
   It is pretty short, chopped in easily digestible chunks,
   and we've spent a lot of time polishing it.
   If you like to learn by fiddling around, then you can get input
