@@ -49,11 +49,11 @@ Source code is available
 
 More information on in the INSTALL documents with
 <a
-href="@DOC@v2.6/Documentation/topdocs/INSTALL.html">building and installation instructions
-(version 2.6)</a> and <a
-href="@DOC@v2.7/Documentation/topdocs/INSTALL.html">
+href="@DOC@stable/Documentation/topdocs/INSTALL.html">building and installation instructions
+(stable version)</a> and <a
+href="@DOC@latest/Documentation/topdocs/INSTALL.html">
 building and installation instructions
-(version 2.7)</a>
+(development version)</a>
 
 <h2>Participating</h2>
 
