@@ -14,7 +14,7 @@
 <h2>Newbies</h2>
 <p>
   Start learning by browsing the
-  <a href="@DOC@v2.6/Documentation/user/lilypond/Tutorial.html">Tutorial</a>
+  <a href="@DOC@stableDocumentation/user/lilypond/Tutorial.html">Tutorial</a>
 </p>
 
 
@@ -29,8 +29,8 @@
 
 <p>
   If it is not there, browse the documentation
-  <a href="@DOC@v2.6">on-line</a>.  (For other versions than 2.6,
-  go <a href="../documentation.html">here</a>).
+  <a href="@DOC@stable">on-line</a>.  (For other versions than the
+  latest stable release, go <a href="../documentation.html">here</a>).
 </p>
 
 <h2>Help!</h2>
