@@ -28,7 +28,7 @@ exactly together.
 
 <p>
 <center>
-<a href="http://lilypond.org/doc/v2.7/input/proportional.pdf">
+<a href="http://lilypond.org/doc/latest/input/proportional.pdf">
 <img src="@IMAGES@proportional-fragment.png"></a>
 <p>
 click for a PDF file.</center>
