@@ -1,3 +1,9 @@
+2006-10-08  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* site, nl, fr *html: Change occurrences of @DOC@/v2.[468] to
+	@DOC@/latest, @DOC@/v2.[579] to @DOC@/latest.  Add `stable' link
+	to lilypond.org website, update `latest' link to point to 2.9.
+	
 2006-10-03  Han-Wen Nienhuys  <hanwen@lilypond.org>
 
 	* site/news.ihtml (Preferably): 2.9.20
